--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -67,6 +67,8 @@ jtrp.report.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 jtrp.report.wd.col.jtrp_col_issueEpicLink=Epic Link
 jtrp.report.wd.col.jtrp_col_issueEpicName=Epic Name
+jtrp.report.wd.col.jtrp_col_parentIssueKey=Parent Issue Key
+jtrp.report.wd.col.jtrp_col_subTasks=Sub-Tasks
 
 jtrp.report.wd.col.jtrp_col_startTime.select=Worklog Start Time
 jtrp.report.wd.col.jtrp_col_timeSpent.select=Worklog Time Spent
@@ -100,6 +102,8 @@ jtrp.report.export.wd.col.jtrp_col_worklogDescription=Worklog Description
 jtrp.report.export.wd.col.jtrp_col_worklogUpdated=Worklog Updated
 jtrp.report.export.wd.col.jtrp_col_issueEpicLink=Epic Link
 jtrp.report.export.wd.col.jtrp_col_issueEpicName=Epic Name
+jtrp.report.export.wd.col.jtrp_col_parentIssueKey=Parent Issue Key
+jtrp.report.export.wd.col.jtrp_col_subTasks=Sub-Tasks
 
 jtrp.report.ps.col.jtrp_col_estimated=Estimated
 jtrp.report.ps.col.jtrp_col_expectedTotal=Total Expected
@@ -128,6 +132,7 @@ jtrp.report.is.col.jtrp_col_totalLogged=Logged
 jtrp.report.is.col.jtrp_col_type=T
 jtrp.report.is.col.jtrp_col_expected=Expected
 jtrp.report.is.col.jtrp_col_expected.help=Logged + Remaining
+jtrp.report.is.col.jtrp_col_parentIssueKey=Parent Issue Key
 
 jtrp.report.is.col.jtrp_col_type.tooltip=Issue Type
 jtrp.report.is.col.jtrp_col_priority.tooltip=Priority
@@ -143,6 +148,7 @@ jtrp.report.export.is.col.jtrp_col_totalLogged=Logged
 jtrp.report.export.is.col.jtrp_col_type=T
 jtrp.report.export.is.col.jtrp_col_expected=Expected
 jtrp.report.export.is.col.jtrp_col_expected.help=Logged + Remaining
+jtrp.report.export.is.col.jtrp_col_parentIssueKey=Parent Issue Key
 
 jtrp.report.us.col.jtrp_col_totalLogged=Total Logged
 jtrp.report.us.col.jtrp_col_user=User
