--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -241,3 +241,4 @@ plugin.missings.hours=Hours
 plugin.missings.dates=Dates
 
 jtrp.picker.suggested.user=Suggested Users
+jtrp.picker.suggested.version=Suggested versions
