--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -247,3 +247,4 @@ plugin.missings.hours=Hours
 plugin.missings.dates=Dates
 
 jtrp.picker.suggested.user=Suggested Users
+jtrp.picker.suggested.group=Suggested Groups
