Change tooltip on picker.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -216,8 +216,7 @@ jtrp.picker.all.status=Status: All
 jtrp.picker.none.filter=Filter: None
 jtrp.select.report=V\u00e1lasz riportot
 
-jtrp.picker.user.tooltip=V\u00e1lasszon felhaszn\u00e1l\u00f3t, vagy a none opci\u00f3t csoport v\u00e1laszt\u00e1shoz.
-jtrp.picker.group.tooltip=V\u00e1lasszon csoportot, vagy a none opci\u00f3t felhaszn\u00e1l\u00f3 v\u00e1laszt\u00e1shoz.
+jtrp.picker.user.tooltip=V\u00e1lasszon felhaszn\u00e1l\u00f3t vagy csoportot.
 
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
