--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -216,8 +216,7 @@ jtrp.picker.all.status=Status: All
 jtrp.picker.none.filter=Filter: None
 jtrp.select.report=Select report
 
-jtrp.picker.user.tooltip=Select users, or the none option to select from groups.
-jtrp.picker.group.tooltip=Select groups, or the none option to select from users.
+jtrp.picker.user.tooltip=Select users or groups.
 
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
