Change text on table report result.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -247,3 +247,12 @@ plugin.missings.hours=Hours
 plugin.missings.dates=Dates
 
 jtrp.picker.suggested.user=Suggested Users
+
+jtrp.table.report.header.date=Worklog Created
+jtrp.table.report.header.issue=Issue Key
+jtrp.table.report.header.summary=Issue Summary
+jtrp.table.report.header.remaining=Remaining
+jtrp.table.report.header.start=Start Time
+jtrp.table.report.header.end=End Time
+jtrp.table.report.header.duration=Time Spent
+jtrp.table.report.header.note=Worklog Description
