--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -174,6 +174,8 @@ jtrp.report.btn.export.excel.current=(Excel) Current columns
 jtrp.report.btn.export.csv.all=(CSV) All columns
 jtrp.report.btn.export.csv.current=(CSV) Current columns
 
+jtrp.report.btn.export.excel.only=Excle Export
+
 jtrp.report.btn.summary.export.csv=(CSV) Export
 jtrp.report.btn.summary.export.excel=(Excel) Export
 
