--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -174,6 +174,8 @@ jtrp.report.btn.export.excel.current=(Excel) Jelenlegi oszlopok
 jtrp.report.btn.export.csv.all=(CSV) Minden oszlop
 jtrp.report.btn.export.csv.current=(CSV) Jelenlegi oszlopok
 
+jtrp.report.btn.export.excel.only=Excle Export
+
 jtrp.report.btn.summary.export.csv=(CSV) Export
 jtrp.report.btn.summary.export.excel=(Excel) Export
 
