--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -106,7 +106,7 @@ plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
 plugin.setting.isactualdate.help=You can choose the calendar default date to show. Choose between the current date or the last week first unfilled day.
 plugin.setting.non.working.issues.help=The selected Issues or Issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary". If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
-plugin.setting.nonestimated.issues.help=Here you can choose whether to send an email every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead.
+plugin.setting.nonestimated.issues.help=Here you can choose whether to send an email every day about issues that are not "Done" and where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead.
 plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays).
 plugin.setting.include.dates.help=List of days that are weekends yet working days.
 plugin.parse.exception.exclude=Exception while try to parse the exclude date(s). Wrong dates:
