JIRAPLUGIN-424-USER-WIZARD
*Added suer wizard logic to JTWA

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -244,3 +244,13 @@ plugin.wrong.endDate= The selected Date cannot exceed the End Date.
 plugin.worklog.not.exists=Worklog not found. Maybe worklog is deleted or you don''t have permission to see.
 
 plugin.settings.installed.plugin.version=Installed version:
+
+jttp.wizard.header=User Settings Wizard
+jttp.wizard.button.close=Close
+jttp.wizard.button.save=Save
+jttp.wizard.button.next=Next
+jttp.wizard.button.prev=Prev
+jttp.wizard.page1.text=Welcome to the Timetracker! Let us help you get started with the configuration.
+jttp.wizard.page6.text=You can change theese setting anytime. The configruation page can be opened by clicking on the gear icon in the upper right corner.
+jttp.wizard.page6.text.header=Well Done! You finished!
+plugin.user.wizard.error=One or more time values was incorrectly entered during the wizard, so the default values have been saved instead. You can modify them on the Settings page.
