--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -245,3 +245,13 @@ plugin.wrong.endDate= A kiv\u00e1lasztott nap nem lehet nagyobb a v\u00e9gd\u00e
 plugin.worklog.not.exists=A worklog nem tal\u00e1lhat\u00f3. Lehets\u00e9ges hogy t\u00f6r\u00f6lve lett vagy nincs jogosults\u00e1god megtekinteni.
 
 plugin.settings.installed.plugin.version=Telep\u00edtett verzi\u00f3:
+
+jttp.wizard.header=User Settings Wizard
+jttp.wizard.button.close=Close
+jttp.wizard.button.save=Save
+jttp.wizard.button.next=Next
+jttp.wizard.button.prev=Prev
+jttp.wizard.page1.text=Welcome to the Timetracker! Let us help you get started with the configuration.
+jttp.wizard.page6.text=You can change theese setting anytime. The configruation page can be opened by clicking on the gear icon in the upper right corner.
+jttp.wizard.page6.text.header=Well Done! You finished!
+plugin.user.wizard.error=One or more time values was incorrectly entered during the wizard, so the default values have been saved instead. You can modify them on the Settings page.
