--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -99,6 +99,7 @@ plugin.setting.nonestimated.issues= Non-estimated issues
 plugin.settings.nonestimated.issues.all=All
 plugin.settings.nonestimated.issues.none=None
 plugin.settings.nonestimated.issues.selected=Selected
+plugin.settings.nonestimated.notification.time=Notification email sending time (server time):
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
@@ -146,6 +147,7 @@ plugin.setting.issue.display.type.issue.summary=Issue Summary
 plugin.setting.issue.display.type.help=You can choose whether you want to display the Issue Summary or the Issue Key.
 plugin.setting.date.already.exists=Date already exists:
 plugin.setting.date.exitst.include.exclude=The date(s) exists in include and exclude dates too:
+plugin.setting.invalid.non.estimate.time=Wrong notification email sending time
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
