JIRAPLUGIN-543_REMAINING_ESTIMATE_REDESIGN
* refactored Parametres in srever side.
* fixed input field design

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -99,7 +99,8 @@ plugin.setting.nonestimated.issues= Non-estimated issues
 plugin.settings.nonestimated.issues.all=All
 plugin.settings.nonestimated.issues.none=None
 plugin.settings.nonestimated.issues.selected=Selected
-plugin.settings.nonestimated.notification.time=Notification email sending time (server time):
+plugin.settings.nonestimated.notification.time=Notification sending time:
+plugin.settings.nonestimated.notification.time.help=Here you can set the notification email sending time. (server time)
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
