--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -99,7 +99,8 @@ plugin.setting.nonestimated.issues=Becs\u00fcletlen idej\u0171 feladatok
 plugin.settings.nonestimated.issues.all=Mind
 plugin.settings.nonestimated.issues.none=Egyik sem
 plugin.settings.nonestimated.issues.selected=Kiv\u00e1lasztott
-plugin.settings.nonestimated.notification.time=Notification email sending time (server time):
+plugin.settings.nonestimated.notification.time=Notification sending time:
+plugin.settings.nonestimated.notification.time.help=Here you can set the notification email sending time. (server time)
 plugin.setting.current=Mai d\u00e1tum
 plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
 plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak az id\u0151 k\u00f6vet\u00e9s (Time Tracking) be\u00e1ll\u00edt\u00e1sn\u00e1l megadott munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00e1l\u00f3 nem dolgozik ennyit egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151napnak sz\u00e1m\u00edt.
