JIRAPLUGIN-557: Create Version and Component summary query. Change reporting page design.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -40,6 +40,7 @@ jtrp.plugin.no_browsable_project_ids=A keres\u00e9si felt\u00e9teleknek nem fele
 jtrp.plugin.no.browse.permission=You don't have permission to browse other user's worklgos.
 jtrp.plugin.invalid.issue.key=Invalid Issue Key
 jtrp.plugin.anonymus=Anonymus
+jtrp.plugin.wrong.tab.information=Not a valid tab information.
 
 jtrp.report.wd.col.jtrp_col_affectedVersions=Affected Versions
 jtrp.report.wd.col.jtrp_col_assignee=Assignee
@@ -259,3 +260,56 @@ jtrp.table.report.header.duration=Time Spent
 jtrp.table.report.header.note=Worklog Description
 
 jtrp.picker.suggested.group=Suggested Groups
+
+jtrp.tab.main.details=Details
+jtrp.tab.main.summary=Summary
+jtrp.tab.sub.project=Project
+jtrp.tab.sub.issue=Issue
+jtrp.tab.sub.user=User
+jtrp.tab.sub.version=Version
+jtrp.tab.sub.component=Component
+
+jtrp.report.vs.col.jtrp_col_project=Project
+jtrp.report.vs.col.jtrp_col_version=Version
+jtrp.report.vs.col.jtrp_col_status=Status
+jtrp.report.vs.col.jtrp_col_startdate=Start date
+jtrp.report.vs.col.jtrp_col_releasedate=Release date
+jtrp.report.vs.col.jtrp_col_description=Description
+jtrp.report.vs.col.jtrp_col_estimated=Estimated
+jtrp.report.vs.col.jtrp_col_remaining=Remaining
+jtrp.report.vs.col.jtrp_col_logged=Logged
+jtrp.report.vs.col.jtrp_col_expected=Expected
+jtrp.report.vs.col.jtrp_col_expected.help=Logged + Remaining
+jtrp.report.vs.status.released=Released
+jtrp.report.vs.status.unreleased=Unreleased
+jtrp.report.vs.status.archived=Archived
+
+jtrp.report.export.vs.col.jtrp_col_project=Project
+jtrp.report.export.vs.col.jtrp_col_version=Version
+jtrp.report.export.vs.col.jtrp_col_status=Status
+jtrp.report.export.vs.col.jtrp_col_startdate=Start date
+jtrp.report.export.vs.col.jtrp_col_releasedate=Release date
+jtrp.report.export.vs.col.jtrp_col_description=Description
+jtrp.report.export.vs.col.jtrp_col_estimated=Estimated
+jtrp.report.export.vs.col.jtrp_col_remaining=Remaining
+jtrp.report.export.vs.col.jtrp_col_logged=Logged
+jtrp.report.export.vs.col.jtrp_col_expected=Expected
+
+jtrp.report.cs.col.jtrp_col_project=Project
+jtrp.report.cs.col.jtrp_col_component=Component
+jtrp.report.cs.col.jtrp_col_lead=Lead
+jtrp.report.cs.col.jtrp_col_description=Description
+jtrp.report.cs.col.jtrp_col_estimated=Estimated
+jtrp.report.cs.col.jtrp_col_remaining=Remaining
+jtrp.report.cs.col.jtrp_col_logged=Logged
+jtrp.report.cs.col.jtrp_col_expected=Expected
+jtrp.report.cs.col.jtrp_col_expected.help=Logged + Remaining
+
+jtrp.report.export.cs.col.jtrp_col_project=Project
+jtrp.report.export.cs.col.jtrp_col_component=Component
+jtrp.report.export.cs.col.jtrp_col_lead=Lead
+jtrp.report.export.cs.col.jtrp_col_description=Description
+jtrp.report.export.cs.col.jtrp_col_estimated=Estimated
+jtrp.report.export.cs.col.jtrp_col_remaining=Remaining
+jtrp.report.export.cs.col.jtrp_col_logged=Logged
+jtrp.report.export.cs.col.jtrp_col_expected=Expected
