JIRAPLUGIN-572: ongoing development (change chart page).

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -316,3 +316,11 @@ jtrp.report.export.cs.col.jtrp_col_estimated=Estimated
 jtrp.report.export.cs.col.jtrp_col_remaining=Remaining
 jtrp.report.export.cs.col.jtrp_col_logged=Logged
 jtrp.report.export.cs.col.jtrp_col_expected=Expected
+
+jtrp.report.chart.groupby.project=Project
+jtrp.report.chart.groupby.issue=Issue
+jtrp.report.chart.groupby.user=User
+
+jtrp.report.chart.display.pie=Pie Chart
+jtrp.report.chart.display.bar=Bar Chart
+jtrp.report.chart.user=User
